--- a/index.html
+++ b/index.html
@@ -72,23 +72,18 @@
 
 
     <!-- Lista de servicios  -->
-    <section class="container" id="servicios">
+    <section class="container" id="ubicacion">
       <div class="row pb-3 pt-3 text-center bg-light">
-        <div class="col-12">
-          <h5>Servicios</h5>
+        <div class="col">
+          <h5>Ubicación</h5>
         </div>
       </div>
       <div class="row mt-4">
-        <div class="col-xl-6">
-          <img class="card-img-top" src="holder.js/315x180/" alt="">
-        </div>
-        <div class="col-xl-6 wow bounceInLeft" data-wow-duration="1.5s" data-wow-delay="0s">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+        <div class="col-md-12 col-lg-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.9239370580017!2d-76.92849067074255!3d3.8759615961146303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1539953258674"
+            width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
+        <div class="col-md-12 col-lg-6">
+          <p>Cordoba Buenavenutra</p>
         </div>
       </div>
     </section>
@@ -197,16 +192,17 @@
           <!-- <div class="w-100"></div> -->
           <div class="col-sm-6 col-md-4">
             <span style="font-size: 3em;">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-twitter-square"></i>
+              <a href="https://www.facebook.com/coomutranstur/"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.instagram.com/coomutranstur/"><i class="fab fa-instagram"></i></a>
+              <a href="https://twitter.com/coomutranstur"><i class="fab fa-twitter-square"></i></a>
             </span>
           </div>
         </div>
       </div>
 
       <div id="derechos" class="col text-center">
-        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
+        <p>
+          COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
           CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
         </p>
         <p><em id="nit">NIT: 830.500.789-9</em></p>
@@ -222,12 +218,12 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 
     <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/wow.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/holder.js"></script>
-  <script src="js/scrollreveal.min.js"></script>
-  <script src="js/app.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/wow.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/holder.js"></script>
+    <script src="js/scrollreveal.min.js"></script>
+    <script src="js/app.js"></script>
 
     <script>
       jQuery(document).ready(function ($) {
