--- a/alianzas.html
+++ b/alianzas.html
@@ -8,13 +8,18 @@
   <title>COOMUSTRANSTUR</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/slick-theme.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Pruebas -->
+
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- Pruebas -->
+
 </head>
 
 <body>
@@ -53,7 +58,7 @@
   </section>
 
   <section>
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
       <div class="alianza row align-items-center">
 
         <div class="col-sm-4 text-center">
@@ -63,7 +68,9 @@
 
           <div class="row">
             <div class="col">
-              <div class="alianza-titulo"><h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5></div>
+              <div class="alianza-titulo">
+                <h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5>
+              </div>
               Propietario: STELLA <br>
               Ubicación: San Cipriano
 
@@ -80,17 +87,25 @@
               <i class="fas fa-glass-martini fa-2x ml-2"></i>
             </div>
 
-          </div>         
+          </div>
         </div>
       </div>
 
     </div>
   </section>
 
+  <div >
+    <p>hola</p>
+  </div>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
   <!-- SCRIPTS -->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/wow.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/holder.js"></script>
   <script src="js/scrollreveal.min.js"></script>
