--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
         </div>
         <div class="w-100 mt-4"></div>
-        <div class="sr-only-sm col-sm-0 col-md-4 col-xl-4">
+        <div class="col-sm-6 col-md-4 col-xl-4">
           <img class="card-img-top" src="holder.js/200x240/" alt="">
         </div>
         <div class="col-sm-6 col-md-4 col-xl-4">
