--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 
   <!-- Pruebas -->
 
-  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
 
   <!-- Pruebas -->
 
 </head>
-<div class="">
+<!-- <div class="js"> -->
 
   <body>
     <div id="preloader"></div>
@@ -221,14 +220,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
-    <script src="bower_components/aos/dist/aos.js"></script>
 
 
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/holder.js"></script>
-    <script src="js/scrollreveal.min.js"></script>
+    <!-- <script src="js/scrollreveal.min.js"></script> -->
     <script src="js/app.js"></script>
 
     <script>
