--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/holder.js"></script>
+  <script src="js/wow.js"></script>
   <!-- <script src="js/scrollreveal.min.js"></script> -->
   <script src="js/app.js"></script>
 
