--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="fb:admins" content="642215239509270" />
+  <meta property="fb:app_id" content="642215239509270" />
 
   <title>COOMUSTRANSTUR</title>
   <link rel="icon" type="image/png" href="img/logo.png" />
