--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#servicios" id="link-servicios">Servicios</a>
+                    <a class="nav-link" href="#ubicacion">Ubicación</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#nosotros">Nosotros</a>
@@ -77,7 +77,7 @@
 
       <div class="row justify-content-center">
         <div class="flecha-abajo">
-          <a href="#servicios"><i class="fa fa-angle-down"></i></a>
+          <a href="#ubicacion"><i class="fa fa-angle-down"></i></a>
         </div>
       </div>
     </section>
