--- a/index.html
+++ b/index.html
@@ -26,247 +26,241 @@
 </head>
 <!-- <div class="js"> -->
 
-  <body>
-    <div id="preloader"></div>
+<body>
+  <div id="preloader"></div>
 
-    <div id="fb-root"></div>
-    <script>(function (d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.1&appId=642215239509270&autoLogAppEvents=1';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
+  <div id="fb-root"></div>
+  <script>(function (d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.1&appId=642215239509270&autoLogAppEvents=1';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 
-    <!-- INDEX -->
-    <section class="container-fluid bg-index">
-      <div class="bg-color">
-        <header>
-          <div class="container">
-            <nav class="row navbar navbar-expand-lg pb-1">
-              <a class="navbar-brand" href="#">Coomutranstur<br></a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">
-                  <i class="fas fa-bars"></i>
-                </span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#ubicacion">Ubicación</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#nosotros">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#politica">Política de Calidad</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contáctenos</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </header>
-      </div>
-
-      <div class="row justify-content-center">
-        <div class="flecha-abajo">
-          <a href="#ubicacion"><i class="fa fa-angle-down"></i></a>
-        </div>
-      </div>
-    </section>
-    <!-- FIN INDEX -->
-
-
-    <!-- Lista de servicios  -->
-    <section class="container" id="ubicacion">
-      <div class="row pb-3 pt-3 text-center bg-light">
-        <div class="col">
-          <h5>Ubicación</h5>
-        </div>
-      </div>
-      <div class="row mt-4">
-        <div class="col-md-12 col-lg-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.9239370580017!2d-76.92849067074255!3d3.8759615961146303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1539953258674"
-            width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
-        <div class="col-md-12 col-lg-6">
-
-          <div class="fb-comments" data-href="https://fserver.github.io/" data-width="100%" data-numposts="3"></div>
-
-        </div>
-      </div>
-    </section>
-
-    <!-- Acerca de  -->
-    <section class="container" id="nosotros">
-      <div class="row pb-3 pt-3 text-center bg-light">
-        <div class="col-12">
-          <h5>Nosotros</h5>
-        </div>
-      </div>
-      <div class="row mt-4 align-items-center">
-        <div class="col-sm-12 col-md-5 col-xl-4 text-center">
-          <img id="logo" class="card-img-top" src="img/logo.jpg" alt="logo Coomutranstur">
-        </div>
-        <div class="col-sm-12 col-md-7 col-xl-8">
-          <p>Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
-            solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
-            Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
-            comunidad
-            en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte. Asociando a
-            personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su trabajo.
-            Establecido el decreto 4588 de 2006.</p>
-        </div>
-      </div>
-      <hr>
-
-      <div class="row mt-4">
-        <div class="col">
-          <h3 class="display-4 text-center">Misión</h3>
-          <p>
-            Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
-            promoviendo
-            el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y el
-            mejoramiento de la calidad de vida a través del empleo decente.
-          </p>
-        </div>
-        <div class="col">
-          <h3 class="display-4 text-center">Visión</h3>
-          <p>
-            La Cooperativa COOMUTRANSTUR se consolidará como una empresa del sector de economía solidaria, que provea a
-            los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
-            construcción del capital social en Colombia.
-          </p>
-        </div>
-      </div>
-      <hr>
-    </section>
-
-    <section class="container" id="politica">
-      <div class="row pb-3 pt-3 text-center bg-light">
-        <div class="col-12">
-          <h5>POLÍTICA DE CALIDAD </h5>
-        </div>
-      </div>
-      <div class="row justify-content-around mt-4">
-        <div class="col-9 text-center">
-          <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
-            nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
-        </div>
-        <div class="w-100 mt-4"></div>
-        <div class="col-sm-6 col-md-4 col-xl-4">
-          <img class="card-img-top" src="holder.js/200x240/" alt="">
-        </div>
-        <div class="col-sm-6 col-md-4 col-xl-4">
-          <h5>Valores corporativos:</h5>
-          <ul>
-            <li>Ayuda mutua</li>
-            <li>Responsabilidad</li>
-            <li>Honestidad </li>
-            <li>Democracia</li>
-            <li>Equidad </li>
-            <li>Solidaridad </li>
-            <li>Honestidad y transparencia</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer  -->
-    <section id="footer" class="">
-      <div class="container justify-content-around text-center mb-4">
-        <div class="row">
-          <div class="col-sm-3 col-md-4">
-            <div class="media">
-              <!-- Telefonos: -->
-              <i class="fas fa-phone-square fa-3x align-self-center mr-1"></i>
-              <div class="media-body">
-                (57) 3148340811 <br>
-                (57) 3148302152 <br>
-                (57) 3155777327
-              </div>
+  <!-- INDEX -->
+  <section class="container-fluid bg-index">
+    <div class="bg-color">
+      <header>
+        <div class="container">
+          <nav class="row navbar navbar-expand-lg pb-1">
+            <a class="navbar-brand" href="#">Coomutranstur<br></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+              ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon">
+                <i class="fas fa-bars"></i>
+              </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#politica">Política de Calidad</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#nosotros">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#ubicacion">Ubicación</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contáctenos</a>
+                </li>
+              </ul>
             </div>
-          </div>
-
-          <div class="col-sm-3 col-md-4 align-self-center">
-            <div class="media d-flex align-items-center">
-              <!-- Correo: -->
-              <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
-              <div class="media-body">
-                coomutranstur@hotmail.com
-              </div>
-            </div>
-          </div>
-
-          <!-- <div class="w-100"></div> -->
-          <div class="col-sm-6 col-md-4">
-            <span style="font-size: 3em;">
-              <a href="https://www.facebook.com/coomutranstur/"><i class="fab fa-facebook"></i></a>
-              <a href="https://www.instagram.com/coomutranstur/"><i class="fab fa-instagram"></i></a>
-              <a href="https://twitter.com/coomutranstur"><i class="fab fa-twitter-square"></i></a>
-            </span>
-          </div>
+          </nav>
         </div>
-      </div>
+      </header>
+    </div>
 
-      <div id="derechos" class="col text-center">
+    <div class="row justify-content-center">
+      <div class="flecha-abajo">
+        <a href="#nosotros"><i class="fa fa-angle-down"></i></a>
+      </div>
+    </div>
+  </section>
+  <!-- FIN INDEX -->
+
+
+  <!-- Acerca de  -->
+  <section class="container" id="nosotros">
+    <div class="row pb-3 pt-3 text-center bg-light">
+      <div class="col-12">
+        <h5>Nosotros</h5>
+      </div>
+    </div>
+    <div class="row mt-4 align-items-center">
+      <div class="col-sm-12 col-md-5 col-xl-4 text-center">
+        <img id="logo" class="card-img-top" src="img/logo.jpg" alt="logo Coomutranstur">
+      </div>
+      <div class="col-sm-12 col-md-7 col-xl-8">
+        <p>Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
+          solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
+          Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
+          comunidad
+          en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte. Asociando a
+          personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su trabajo.
+          Establecido el decreto 4588 de 2006.</p>
+      </div>
+    </div>
+    <hr>
+
+    <div class="row mt-4">
+      <div class="col">
+        <h3 class="display-4 text-center">Misión</h3>
         <p>
-          COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
-          CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
+          Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
+          promoviendo
+          el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y el
+          mejoramiento de la calidad de vida a través del empleo decente.
         </p>
-        <p><em id="nit">NIT: 830.500.789-9</em></p>
+      </div>
+      <div class="col">
+        <h3 class="display-4 text-center">Visión</h3>
+        <p>
+          La Cooperativa COOMUTRANSTUR se consolidará como una empresa del sector de economía solidaria, que provea a
+          los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
+          construcción del capital social en Colombia.
+        </p>
+      </div>
+    </div>
+    <hr>
+  </section>
+
+  <section class="container" id="politica">
+    <div class="row pb-3 pt-3 text-center bg-light">
+      <div class="col-12">
+        <h5>POLÍTICA DE CALIDAD </h5>
+      </div>
+    </div>
+    <div class="row justify-content-around mt-4">
+      <div class="col-9 text-center">
+        <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
+          nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
+      </div>
+      <div class="w-100 mt-4"></div>
+      <div class="col-sm-6 col-md-4 col-xl-4">
+        <img class="card-img-top" src="holder.js/200x240/" alt="">
+      </div>
+      <div class="col-sm-6 col-md-4 col-xl-4">
+        <h5>Valores corporativos:</h5>
+        <ul>
+          <li>Ayuda mutua</li>
+          <li>Responsabilidad</li>
+          <li>Honestidad </li>
+          <li>Democracia</li>
+          <li>Equidad </li>
+          <li>Solidaridad </li>
+          <li>Honestidad y transparencia</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Ubicacion  -->
+  <section class="container" id="ubicacion">
+    <div class="row pb-3 pt-3 text-center bg-light">
+      <div class="col">
+        <h5>Ubicación</h5>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col-md-12 col-lg-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.9239370580017!2d-76.92849067074255!3d3.8759615961146303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1539953258674"
+          width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
+      <div class="col-md-12 col-lg-6">
+
+        <div class="fb-comments" data-href="https://fserver.github.io/" data-width="100%" data-numposts="3"></div>
 
       </div>
+    </div>
+  </section>
 
-    </section>
+  <!-- Footer  -->
+  <section id="footer" class="">
+    <div class="container justify-content-around text-center mb-4">
+      <div class="row">
+        <div class="col-sm-3 col-md-4">
+          <div class="media">
+            <!-- Telefonos: -->
+            <i class="fas fa-phone-square fa-3x align-self-center mr-1"></i>
+            <div class="media-body">
+              (57) 3148340811 <br>
+              (57) 3148302152 <br>
+              (57) 3155777327
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-3 col-md-4 align-self-center">
+          <div class="media d-flex align-items-center">
+            <!-- Correo: -->
+            <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
+            <div class="media-body">
+              coomutranstur@hotmail.com
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="w-100"></div> -->
+        <div class="col-sm-6 col-md-4">
+          <span style="font-size: 3em;">
+            <a href="https://www.facebook.com/coomutranstur/"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/coomutranstur/"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/coomutranstur"><i class="fab fa-twitter-square"></i></a>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div id="derechos" class="col text-center">
+      <p>
+        COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
+        CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
+      </p>
+      <p><em id="nit">NIT: 830.500.789-9</em></p>
+
+    </div>
+
+  </section>
 
 
-    <!-- SCRIPTS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <!-- SCRIPTS -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/holder.js"></script>
-    <script src="js/wow.js"></script>
-    <!-- <script src="js/scrollreveal.min.js"></script> -->
-    <script src="js/app.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/holder.js"></script>
+  <script src="js/wow.js"></script>
+  <script src="js/scrollreveal.min.js"></script>
+  <script src="js/app.js"></script>
 
-    <script>
+  <script>
 
 
 
-      jQuery(document).ready(function ($) {
-        // site preloader -- also uncomment the div in the header and the css style for #preloader
-        $(window).load(function () {
-          $("#preloader").fadeOut("slow", function () {
-            $(this).remove();
-          });
+    jQuery(document).ready(function ($) {
+      // site preloader -- also uncomment the div in the header and the css style for #preloader
+      $(window).load(function () {
+        $("#preloader").fadeOut("slow", function () {
+          $(this).remove();
         });
       });
-    </script>
+    });
+  </script>
 
-    <script>
+  <!-- Begin of Chaport Live Chat code -->
+  <script type="text/javascript"> (function (w, d, v3) { w.chaportConfig = { appId: '5babec7cb3796d1c348a5cd1' }; if (w.chaport) return; v3 = w.chaport = {}; v3._q = []; v3._l = {}; v3.q = function () { v3._q.push(arguments) }; v3.on = function (e, fn) { if (!v3._l[e]) v3._l[e] = []; v3._l[e].push(fn) }; var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://app.chaport.com/javascripts/insert.js'; var ss = d.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss) })(window, document); </script>
+  <!-- End of Chaport Live Chat code -->
 
-      AOS.init();
-
-    </script>
-
-    <!-- Begin of Chaport Live Chat code -->
-    <script type="text/javascript"> (function (w, d, v3) { w.chaportConfig = { appId: '5babec7cb3796d1c348a5cd1' }; if (w.chaport) return; v3 = w.chaport = {}; v3._q = []; v3._l = {}; v3.q = function () { v3._q.push(arguments) }; v3.on = function (e, fn) { if (!v3._l[e]) v3._l[e] = []; v3._l[e].push(fn) }; var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://app.chaport.com/javascripts/insert.js'; var ss = d.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss) })(window, document); </script>
-    <!-- End of Chaport Live Chat code -->
-
-  </body>
+</body>
 </div>
 
 </html>
