--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   </section>
 
   <!-- Footer  -->
-  <section id="footer" class="">
+  <section id="footer" class="mt-4">
     <div class="container justify-content-around text-center mb-4">
       <div class="row">
         <div class="col-sm-3 col-md-4">
