--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
       <div class="w-100 mt-4"></div>
       <div class="col-sm-6 col-md-4 col-xl-4">
-        <img class="card-img-top" src="holder.js/200x240/" alt="">
+        <img src="holder.js/200x240/" alt="">
       </div>
       <div class="col-sm-6 col-md-4 col-xl-4">
         <h5>Valores corporativos:</h5>
