--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="col">
         <h3 class="display-4 text-center">Visión</h3>
         <p>
-          La Cooperativa COOMUTRANSTUR se consolidará como una empresa del sector de economía solidaria, que provea a
+          La Cooperativa "<strong>COOMUTRANSTUR</strong>" se consolidará como una empresa del sector de economía solidaria, que provea a
           los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
           construcción del capital social en Colombia.
         </p>
