--- a/index.html
+++ b/index.html
@@ -109,20 +109,21 @@
 
     <div class="row mt-4">
       <div class="col">
+        <h3 class="display-4 text-center">Visión</h3>
+        <p>
+          La Cooperativa "<strong>COOMUTRANSTUR</strong>" se consolidará como una empresa del sector de economía
+          solidaria, que provea a
+          los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
+          construcción del capital social en Colombia.
+        </p>
+      </div>
+      <div class="col">
         <h3 class="display-4 text-center">Misión</h3>
         <p>
           Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
           promoviendo
           el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y el
           mejoramiento de la calidad de vida a través del empleo decente.
-        </p>
-      </div>
-      <div class="col">
-        <h3 class="display-4 text-center">Visión</h3>
-        <p>
-          La Cooperativa "<strong>COOMUTRANSTUR</strong>" se consolidará como una empresa del sector de economía solidaria, que provea a
-          los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
-          construcción del capital social en Colombia.
         </p>
       </div>
     </div>
